GCA-103 implement training controller and fix facade
