# src/main/java/com/gym/crm/app/controller/TrainingController.java
@@ -2,6 +2,7 @@ package com.gym.crm.app.controller;
 
 import com.gym.crm.app.api.TrainingTypesApi;
 import com.gym.crm.app.api.TrainingsApi;
+import com.gym.crm.app.facade.GymFacade;
 import com.gym.crm.app.rest.TrainingCreateRequest;
 import com.gym.crm.app.rest.TrainingTypeGetResponse;
 import org.springframework.http.ResponseEntity;
@@ -11,7 +12,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.context.request.NativeWebRequest;
 
-import java.util.List;
 import java.util.Optional;
 
 import static com.gym.crm.app.controller.ApiConstants.ROOT_PATH;
@@ -19,14 +19,20 @@ import static com.gym.crm.app.controller.ApiConstants.ROOT_PATH;
 @RestController
 @RequestMapping(ROOT_PATH)
 public class TrainingController implements TrainingsApi, TrainingTypesApi {
+    private GymFacade facade;
+
     @GetMapping("/training-types")
     public ResponseEntity<TrainingTypeGetResponse> getTrainingTypes() {
-        return TrainingTypesApi.super.getTrainingTypes();
+        TrainingTypeGetResponse response = facade.getAllTrainingsTypes();
+
+        return ResponseEntity.ok(response);
     }
 
     @PostMapping("/trainings")
     public ResponseEntity<Void> addTraining(TrainingCreateRequest trainingCreateRequest) {
-        return TrainingsApi.super.addTraining(trainingCreateRequest);
+        facade.addTraining(trainingCreateRequest);
+
+        return ResponseEntity.ok().build();
     }
 
     @Override
